--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,83 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    привет мир
+    <div class="wrapper">
+        <sidebar class="sidebar">
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </sidebar>
+        <main class="main">
+            <header class="first">
+                <div class="header">
+                    header
+                </div>
+                <div class="players">
+                    players
+                </div>
+            </header>
+            <div class="feature">
+                <div class="feature__wrapper">
+                    <div class="feature__block">
+                        <div class="feature__icon">
+                            <img src="icons/secondLogo/steam.svg" alt="steam">
+                        </div>
+                        <div class="feature__text">
+                            <div class="feature__title">Лучшая игровая плаформа</div>
+                            <div class="feature__descr">Как уже неоднократно упомянуто, базовые сценарии поведения пользователей освещают чрезвычайно интересные особенности картины.</div>
+                        </div>
+                    </div>
+                    <div class="feature__block">
+                        <div class="feature__icon">
+                            <img src="icons/secondLogo/cup.svg" alt="cup">
+                        </div>
+                        <div class="feature__text">
+                            <div class="feature__title">Еженедельные турниры</div>
+                            <div class="feature__descr">Как уже неоднократно упомянуто, базовые сценарии поведения пользователей освещают чрезвычайно интересные особенности картины.</div>
+                        </div>
+                    </div>
+                    <div class="feature__block">
+                        <div class="feature__icon">
+                            <img src="icons/secondLogo/headphones.svg" alt="online">
+                        </div>
+                        <div class="feature__text">
+                            <div class="feature__title">Онлайн общение</div>
+                            <div class="feature__descr">Как уже неоднократно упомянуто, базовые сценарии поведения пользователей освещают чрезвычайно интересные особенности картины.</div>
+                        </div>
+                    </div>
+                    <div class="feature__block">
+                        <div class="feature__icon">
+                            <img src="icons/secondLogo/earth.svg" alt="earth">
+                        </div>
+                        <div class="feature__text">
+                            <div class="feature__title">Сообщество во всем мире</div>
+                            <div class="feature__descr">Как уже неоднократно упомянуто, базовые сценарии поведения пользователей освещают чрезвычайно интересные особенности картины.</div>
+                        </div>
+                    </div>
+                    <div class="feature__block">
+                        <div class="feature__icon">
+                            <img src="icons/secondLogo/bubbles.svg" alt="bubbles">
+                        </div>
+                        <div class="feature__text">
+                            <div class="feature__title">Онлайн чат с поддержкой</div>
+                            <div class="feature__descr">Как уже неоднократно упомянуто, базовые сценарии поведения пользователей освещают чрезвычайно интересные особенности картины.</div>
+                        </div>
+                    </div>
+                    <div class="feature__block">
+                        <div class="feature__icon">
+                            <img src="icons/secondLogo/paying.svg" alt="paing">
+                        </div>
+                        <div class="feature__text">
+                            <div class="feature__title">Удобная система оплаты</div>
+                            <div class="feature__descr">Как уже неоднократно упомянуто, базовые сценарии поведения пользователей освещают чрезвычайно интересные особенности картины.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
