--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,28 @@
                     </div>
                 </div>
             </div>
+
+            <section class="banner">
+                <div class="banner__img">
+                    <div class="banner__img_bg">
+                        <img src="img/thirdSection/bg.jpg" alt="bg">
+                    </div>
+                    <div class="banner__img_back">
+                        <img src="img/thirdSection/boy.jpg" alt="boy-players" >
+                    </div>
+                    <div class="banner__img_front">
+                        <img src="img/thirdSection/players.jpg" alt="players" >
+                    </div>
+                </div>
+                <div class="banner__header">
+                    <div class="banner__text-block">
+                        <h3 class="subtitle subtitle_second">ВЕДИ КОМАНДУ К ПОБЕДЕ</h3>
+                        <h2 class="title title_second">Лучшее место для онлайн соревнований</h2>
+                        <p class="banner__txt">Как уже неоднократно упомянуто, базовые сценарии поведения пользователей освещают чрезвычайно интересные особенности картины.</p>
+                        <button class="btn">СОЗДАТЬ КОМАНДУ</button>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
     <script src="js/script.js"></script>
