--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,149 @@
                     </div>
                 </div>
             </section>
+
+            <div class="cards">
+                <div class="cards__wrapper">
+                    <div class="card">
+                        <div class="card__img card__img_1"></div>
+                        <div class="card__platform">PC</div>
+                        <div class="card__descr">
+                            <div class="card__descr-block">
+                                <img src="img/cards/location.svg" alt="location">
+                                <p>EUR</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/users.svg" alt="players">
+                                <p>20+ players</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/creditCard.svg" alt="creditCard">
+                                <p>от 100руб</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/display.svg" alt="display">
+                                <p>4к монитор</p>
+                            </div>
+                        </div>
+                        <div class="btn card__btn">ВЫБРАТЬ ПЛАТФОРМУ</div>
+                    </div>
+                    <div class="card">
+                        <div class="card__img card__img_2"></div>
+                        <div class="card__platform">Play Station</div>
+                        <div class="card__descr">
+                            <div class="card__descr-block">
+                                <img src="img/cards/location.svg" alt="location">
+                                <p>EUR</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/users.svg" alt="players">
+                                <p>20+ players</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/creditCard.svg" alt="creditCard">
+                                <p>от 100руб</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/display.svg" alt="display">
+                                <p>4к монитор</p>
+                            </div>
+                        </div>
+                        <div class="btn card__btn">ВЫБРАТЬ ПЛАТФОРМУ</div>
+                    </div>
+                    <div class="card">
+                        <div class="card__img card__img_3"></div>
+                        <div class="card__platform">X-BOX</div>
+                        <div class="card__descr">
+                            <div class="card__descr-block">
+                                <img src="img/cards/location.svg" alt="location">
+                                <p>EUR</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/users.svg" alt="players">
+                                <p>20+ players</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/creditCard.svg" alt="creditCard">
+                                <p>от 100руб</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/display.svg" alt="display">
+                                <p>4к монитор</p>
+                            </div>
+                        </div>
+                        <div class="btn card__btn">ВЫБРАТЬ ПЛАТФОРМУ</div>
+                    </div>
+                    <div class="card">
+                        <div class="card__img card__img_4"></div>
+                        <div class="card__platform">Nintendo</div>
+                        <div class="card__descr">
+                            <div class="card__descr-block">
+                                <img src="img/cards/location.svg" alt="location">
+                                <p>EUR</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/users.svg" alt="players">
+                                <p>20+ players</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/creditCard.svg" alt="creditCard">
+                                <p>от 100руб</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/display.svg" alt="display">
+                                <p>4к монитор</p>
+                            </div>
+                        </div>
+                        <div class="btn card__btn">ВЫБРАТЬ ПЛАТФОРМУ</div>
+                    </div>
+                    <div class="card">
+                        <div class="card__img card__img_5"></div>
+                        <div class="card__platform">Steam deck</div>
+                        <div class="card__descr">
+                            <div class="card__descr-block">
+                                <img src="img/cards/location.svg" alt="location">
+                                <p>EUR</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/users.svg" alt="players">
+                                <p>20+ players</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/creditCard.svg" alt="creditCard">
+                                <p>от 100руб</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/display.svg" alt="display">
+                                <p>4к монитор</p>
+                            </div>
+                        </div>
+                        <div class="btn card__btn">ВЫБРАТЬ ПЛАТФОРМУ</div>
+                    </div>
+                    <div class="card">
+                        <div class="card__img card__img_6"></div>
+                        <div class="card__platform">Mobile</div>
+                        <div class="card__descr">
+                            <div class="card__descr-block">
+                                <img src="img/cards/location.svg" alt="location">
+                                <p>EUR</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/users.svg" alt="players">
+                                <p>20+ players</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/creditCard.svg" alt="creditCard">
+                                <p>от 100руб</p>
+                            </div>
+                            <div class="card__descr-block">
+                                <img src="img/cards/display.svg" alt="display">
+                                <p>4к монитор</p>
+                            </div>
+                        </div>
+                        <div class="btn card__btn">ВЫБРАТЬ ПЛАТФОРМУ</div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
     <script src="js/script.js"></script>
