--- a/src/index.html
+++ b/src/index.html
@@ -249,6 +249,86 @@
                     </div>
                 </div>
             </div>
+
+            <div class="gallery">
+                <div class="gallery__item gallery__item_1">
+                    <img src="img/lastSection/1_1.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_2">
+                    <img src="img/lastSection/1_2.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_3">
+                    <img src="img/lastSection/1_3.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_4">
+                    <img src="img/lastSection/1_4.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_5">
+                    <img src="img/lastSection/2_1.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_6">
+                    <img src="img/lastSection/2_2.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_7">
+                    <img src="img/lastSection/2_3.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_8">
+                    <img src="img/lastSection/2_4.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_9">
+                    <img src="img/lastSection/2_5.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_10">
+                    <img src="img/lastSection/3_1.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_11">
+                    <img src="img/lastSection/3_2.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_12">
+                    <img src="img/lastSection/3_3.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_13">
+                    <img src="img/lastSection/3_4.jpg" alt="img">
+                </div>
+                <div class="gallery__item gallery__item_14">
+                    <img src="img/lastSection/3_5.jpg" alt="img">
+                </div>
+            </div>
+
+            <footer class="footer">
+                <div class="footer__content">
+                    <a href="#" class="footer__logo">
+                        <img src="icons/logo.svg" alt="logo">
+                    </a>
+                    <ul class="footer__menu">
+                        <li class="footer__list">
+                            <a href="#">
+                                АРЕНДА КОНСОЛЕЙ
+                            </a>
+                        </li>
+                        <li class="footer__list">
+                            <a href="#">
+                                КОМАНДНЫЕ СОРЕВНОВАНИЯ
+                            </a>
+                        </li>
+                        <li class="footer__list">
+                            <a href="#">
+                                АРЕНДА СЕРВЕРА
+                            </a>
+                        </li>
+                        <li class="footer__list">
+                            <a href="#">
+                                СООБЩЕСТВО
+                            </a>
+                        </li>
+                        <li class="footer__list">
+                            <a href="#">
+                                РАБОТАЙ И ИГРАЙ
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </footer>
         </main>
     </div>
     <script src="js/script.js"></script>
