--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,42 @@
 <body>
     <div class="wrapper">
         <sidebar class="sidebar">
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <div class="hamburger"></div>
         </sidebar>
         <main class="main">
-            <header class="first">
-                <div class="header">
-                    header
+            <header class="header">
+                <div class="header__main">
+                    <div class="header__logo">
+                        <img src="icons/logo.svg" alt="logo">
+                    </div>
+                    <h3 class="subtitle">ТВОЯ ИГРОВАЯ СТАНЦИЯ</h3>
+                    <h1 class="title title_first">Погрузись в мир современных игр</h1>
+                    <button class="btn header__btn">ВЫБРАТЬ ПРИСТАВКУ</button>
+                    <div class="header__descr">О нас</div>
+                    <div class="header__game">
+                        <img src="icons/logo/Imania.svg" alt="игромания">
+                        <img src="icons/logo/steam.svg" alt="steam">
+                        <img src="icons/logo/PCgamer.svg" alt="PCGamer">
+                        <img src="icons/logo/games.svg" alt="games">
+                    </div>
                 </div>
-                <div class="players">
-                    players
+                <div class="header__players">
+                    <h3 class="subtitle subtitle_first header__subtitle">TOP 3 PLAYERS</h3>
+                    <img src="img/players/Liza.png" alt="Liza" class="header__player">
+                    <div class="header__text">
+                        <div class="subtitle subtitle_white">Лиза Фролова</div>
+                        <div class="header__score">score 2953</div>
+                    </div>
+                    <img src="img/players/Andrey.png" alt="Andrey" class="header__player">
+                    <div class="header__text">
+                        <div class="subtitle subtitle_white">Андрей Степанов</div>
+                        <div class="header__score">score 2453</div>
+                    </div>
+                    <img src="img/players/Ivan.png" alt="Ivan" class="header__player">
+                    <div class="header__text">
+                        <div class="subtitle subtitle_white">Иван Савельев</div>
+                        <div class="header__score">score 2253</div>
+                    </div>
                 </div>
             </header>
             <div class="feature">
