--- a/src/index.html
+++ b/src/index.html
@@ -32,20 +32,26 @@
                 </div>
                 <div class="header__players">
                     <h3 class="subtitle subtitle_first header__subtitle">TOP 3 PLAYERS</h3>
-                    <img src="img/players/Liza.png" alt="Liza" class="header__player">
-                    <div class="header__text">
-                        <div class="subtitle subtitle_white">Лиза Фролова</div>
-                        <div class="header__score">score 2953</div>
+                    <div class="header__players-block">
+                        <img src="img/players/Liza.png" alt="Liza" class="header__player">
+                        <div class="header__text">
+                            <div class="subtitle subtitle_white">Лиза Фролова</div>
+                            <div class="header__score">score 2953</div>
+                        </div>
                     </div>
-                    <img src="img/players/Andrey.png" alt="Andrey" class="header__player">
-                    <div class="header__text">
-                        <div class="subtitle subtitle_white">Андрей Степанов</div>
-                        <div class="header__score">score 2453</div>
+                    <div class="header__players-block">
+                        <img src="img/players/Andrey.png" alt="Andrey" class="header__player">
+                        <div class="header__text">
+                            <div class="subtitle subtitle_white">Андрей Степанов</div>
+                            <div class="header__score">score 2453</div>
+                        </div>
                     </div>
-                    <img src="img/players/Ivan.png" alt="Ivan" class="header__player">
-                    <div class="header__text">
-                        <div class="subtitle subtitle_white">Иван Савельев</div>
-                        <div class="header__score">score 2253</div>
+                    <div class="header__players-block">
+                        <img src="img/players/Ivan.png" alt="Ivan" class="header__player">
+                        <div class="header__text">
+                            <div class="subtitle subtitle_white">Иван Савельев</div>
+                            <div class="header__score">score 2253</div>
+                        </div>
                     </div>
                 </div>
             </header>
